--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "reflect-metadata": "*",
     "rxjs": "^5.0.0-beta.12",
     "systemjs": "0.19.40",
-    "zone.js": "^0.6.25"
+    "zone.js": "^0.6.25",
+    "rxjs": "*"
   },
   "devDependencies": {
     "concurrently": "^3.1.0",
